{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 45,
  "lineage": "c64c3103-d207-6208-1573-68f2e6c69ab0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b1deee75235aa4bb",
            "arn": "arn:aws:ec2:eu-central-1:731156854624:instance/i-0e1cd4d0bbdf72eea",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e1cd4d0bbdf72eea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "access-key.ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d1ab42175e2ddda0",
            "private_dns": "ip-172-31-47-27.eu-central-1.compute.internal",
            "private_ip": "172.31.47.27",
            "public_dns": "ec2-18-184-164-2.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.164.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f6520083f281b36b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_cassandra_ports",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9470f5e8",
            "tags": {
              "Name": "1",
              "type": "cassandra"
            },
            "tags_all": {
              "Name": "1",
              "type": "cassandra"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-027a3112ff7659c99",
              "sg-0daa37f64eee9cbc5"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b1deee75235aa4bb",
            "arn": "arn:aws:ec2:eu-central-1:731156854624:instance/i-058accfb08ad99ce9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058accfb08ad99ce9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "access-key.ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d9ee1a106b95fe0",
            "private_dns": "ip-172-31-32-156.eu-central-1.compute.internal",
            "private_ip": "172.31.32.156",
            "public_dns": "ec2-3-67-174-146.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.174.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0179d176af1e3d242",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_cassandra_ports",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9470f5e8",
            "tags": {
              "Name": "2",
              "type": "cassandra"
            },
            "tags_all": {
              "Name": "2",
              "type": "cassandra"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-027a3112ff7659c99",
              "sg-0daa37f64eee9cbc5"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_cassandra_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731156854624:security-group/sg-027a3112ff7659c99",
            "description": "Allow allow cassandra inbound traffic",
            "egress": [],
            "id": "sg-027a3112ff7659c99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "cassandra traffic",
                "from_port": 7000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "cassandra traffic",
                "from_port": 7199,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7199
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "cassandra traffic",
                "from_port": 9042,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9042
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "cassandra traffic",
                "from_port": 9142,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9142
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "cassandra traffic",
                "from_port": 9160,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9160
              }
            ],
            "name": "allow_cassandra_ports",
            "name_prefix": "",
            "owner_id": "731156854624",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01086e6b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731156854624:security-group/sg-0daa37f64eee9cbc5",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0daa37f64eee9cbc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "731156854624",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01086e6b"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}